# kyrys

./: .gitignore  .travis.yml  CMakeCache.txt_88ed2e2c-e14d-4221-914f-e1e9bee28582  CMakeLists.txt  LICENSE  README.md
doc/: Kyrys overview.rtf  Kyrys_performance.docx
doc/Kyrys documentation/: Kyrys infrastructure diagram.odg
doc/Kyrys documentation/meeting 02 - design of lower layers of project/: Security use cases.docx
doc/Meetings/meeting 01 - overview/: Kyrys overview.docx  Prezentation 01 - overview.pptx
doc/Meetings/meeting 02 - design of lower layers of project/: Security use cases.docx
doc/Meetings/meeting 02 - design of lower layers of project/Security use cases/: Security use cases.docx  connection.odg  use case 1.3.2.odg
doc/Oficial documentation/SK-CZ manual/kyrys-dokumentace tex/: main.tex
doc/Study materials (FI MUNI)/: licence.txt
doc/Working documentation/: Kyrys_performance.docx  service-names-port-numbers.xlsx
include/: aesContainer.hpp  chat.hpp  chatInterface.hpp  client.hpp  clientResolver.hpp  clientResolverUnique.hpp  enums.hpp  friend.hpp  item.hpp  reference.hpp  resolver.hpp  server.hpp  serverResolver.hpp  socketThread.hpp  user.hpp  userNetworkOptions.hpp  utils.hpp  welcomePage.hpp  welcomepages.hpp
lib/mbedTLS/: CMakeLists.txt
scripts/: pre-commit  script.bat
src/: aesContainer.cpp  chat.cpp  chatInterface.cpp  client.cpp  clientMain.cpp  clientResolver.cpp  clientResolverUnique.cpp  friend.cpp  item.cpp  main.cpp  resolver.cpp  server.cpp  serverMain.cpp  serverResolver.cpp  socketThread.cpp  user.cpp  userNetworkOptions.cpp  utils.cpp
test/: CMakeLists.txt  barTest.cpp  clientTest.cpp  fooTest.cpp  itemTest.cpp  resolverTest.cpp  serverResolverTest.cpp  testAesContainer.cpp  testClient.cpp
test_travis/: main.cpp
test_travis/src/: testing.cpp
